--- a/index.html
+++ b/index.html
@@ -52,35 +52,6 @@
         input[type="submit"]:hover {
             background-color: #87CEEB;
         }
-
-        .tooltip {
-            position: relative;
-            display: inline-block;
-            border-bottom: 1px dotted white;
-            cursor: pointer;
-        }
-
-        .tooltip .tooltiptext {
-            visibility: hidden;
-            width: 200px;
-            background-color: #f9f9f9;
-            color: #000;
-            text-align: center;
-            border-radius: 6px;
-            padding: 5px;
-            position: absolute;
-            z-index: 1;
-            bottom: 125%;
-            left: 50%;
-            margin-left: -100px;
-            opacity: 0;
-            transition: opacity 0.3s;
-        }
-
-        .tooltip:hover .tooltiptext {
-            visibility: visible;
-            opacity: 1;
-        }
     </style>
 </head>
 
@@ -101,160 +72,21 @@
                 </div>
             </div>
 
-            <!-- Frage 2 -->
+            <!-- Weitere Fragen hier, wie in deinem originalen Code... -->
+
+            <!-- Frage 6 -->
             <div class="form-field">
-                <label for="gender">2. Welches Geschlecht hast du?</label><br>
+                <label for="whoEuthanasia">6. Wer darf Sterbehilfe beanspruchen?</label><br>
                 <div>
-                    <label><input type="radio" name="gender" value="Weiblich"> Weiblich</label><br>
-                    <label><input type="radio" name="gender" value="Männlich"> Männlich</label><br>
-                    <label><input type="radio" name="gender" value="Divers"> Divers</label>
+                    <label><input type="checkbox" name="whoEuthanasia" value="Alle Personen, die schwer leidende, unheilbare Krankheiten haben"> Alle Personen, die schwer leidende, unheilbare Krankheiten haben</label><br>
+                    <label><input type="checkbox" name="whoEuthanasia" value="Nur Erwachsene in bestimmten Situationen"> Nur Erwachsene in bestimmten Situationen</label><br>
+                    <label><input type="checkbox" name="whoEuthanasia" value="Nur Menschen, die bei vollem Bewusstsein eine Entscheidung treffen können"> Nur Menschen, die bei vollem Bewusstsein eine Entscheidung treffen können</label><br>
+                    <label><input type="checkbox" name="whoEuthanasia" value="Niemand"> Niemand</label>
                 </div>
             </div>
 
-            <!-- Frage 3 -->
+            <!-- Frage 16 -->
             <div class="form-field">
-                <label for="religion">3. Welcher Religion gehörst du an?</label><br>
-                <div>
-                    <label><input type="radio" name="religion" value="Christentum"> Christentum</label><br>
-                    <label><input type="radio" name="religion" value="Islam"> Islam</label><br>
-                    <label><input type="radio" name="religion" value="Judentum"> Judentum</label><br>
-                    <label><input type="radio" name="religion" value="Buddhismus"> Buddhismus</label><br>
-                    <label><input type="radio" name="religion" value="Hinduismus"> Hinduismus</label><br>
-                    <label><input type="radio" name="religion" value="Keine Religion"> Keine Religion</label>
-                </div>
-            </div>
-
-            <!-- Frage 4 -->
-<div class="form-field">
-    <label for="knowEuthanasia">4. Weißt du, was Sterbehilfe ist?</label><br>
-    <div>
-        <label><input type="radio" name="knowEuthanasia" value="Ja"> Ja</label><br>
-        <label><input type="radio" name="knowEuthanasia" value="Nein"> Nein</label>
-    </div>
-</div>
-
-<!-- Frage 4a (folgt auf Frage 4) -->
-<div class="form-field">
-    <label for="supportEuthanasia">4a. Wenn ja, bist du dafür?</label><br>
-    <div>
-        <label><input type="radio" name="supportEuthanasia" value="Ja"> Ja</label><br>
-        <label><input type="radio" name="supportEuthanasia" value="Nein"> Nein</label><br>
-        <label><input type="radio" name="supportEuthanasia" value="Unsicher"> Unsicher</label>
-    </div>
-</div>
-
-<!-- Frage 5 -->
-<div class="form-field">
-    <label for="experienceEuthanasia">5. Hast du schon Erfahrungen mit Sterbehilfe?</label><br>
-    <div>
-        <label><input type="radio" name="experienceEuthanasia" value="Ja, persönlich"> Ja, persönlich</label><br>
-        <label><input type="radio" name="experienceEuthanasia" value="Ja, im Bekanntenkreis"> Ja, im Bekanntenkreis</label><br>
-        <label><input type="radio" name="experienceEuthanasia" value="Nein"> Nein</label>
-    </div>
-</div>
-
-<!-- Frage 6 -->
-<div class="form-field">
-    <label for="whoEuthanasia">6. Wer darf Sterbehilfe beanspruchen?</label><br>
-    <div>
-        <label><input type="checkbox" name="whoEuthanasia" value="Alle Personen, die schwer leidende, unheilbare Krankheiten haben"> Alle Personen, die schwer leidende, unheilbare Krankheiten haben</label><br>
-        <label><input type="checkbox" name="whoEuthanasia" value="Nur Erwachsene in bestimmten Situationen"> Nur Erwachsene in bestimmten Situationen</label><br>
-        <label><input type="checkbox" name="whoEuthanasia" value="Nur Menschen, die bei vollem Bewusstsein eine Entscheidung treffen können"> Nur Menschen, die bei vollem Bewusstsein eine Entscheidung treffen können</label><br>
-        <label><input type="checkbox" name="whoEuthanasia" value="Niemand"> Niemand</label>
-    </div>
-</div>
-
-<!-- Frage 7 -->
-<div class="form-field">
-    <label for="90yoGrandmother">7. Darf eine 90-Jährige Oma mit vielen Krankheiten (z.B. Demenz, Alzheimer, Krebs im Endstadium) Sterbehilfe erhalten?</label><br>
-    <div>
-        <label><input type="radio" name="90yoGrandmother" value="Ja"> Ja</label><br>
-        <label><input type="radio" name="90yoGrandmother" value="Nein"> Nein</label><br>
-        <label><input type="radio" name="90yoGrandmother" value="Unsicher"> Unsicher</label>
-    </div>
-</div>
-
-<!-- Frage 8 -->
-<div class="form-field">
-    <label for="9yoChild">8. Darf ein 9-jähriges Kind mit Krebs Sterbehilfe in Anspruch nehmen?</label><br>
-    <div>
-        <label><input type="radio" name="9yoChild" value="Ja"> Ja</label><br>
-        <label><input type="radio" name="9yoChild" value="Nein"> Nein</label><br>
-        <label><input type="radio" name="9yoChild" value="Unsicher"> Unsicher</label>
-    </div>
-</div>
-
-<!-- Frage 9 -->
-<div class="form-field">
-    <label for="40yoFather">9. Darf ein 40-Jähriger Familienvater mit einem Schlaganfall (mit einseitiger Lähmung) Sterbehilfe beanspruchen?</label><br>
-    <div>
-        <label><input type="radio" name="40yoFather" value="Ja"> Ja</label><br>
-        <label><input type="radio" name="40yoFather" value="Nein"> Nein</label><br>
-        <label><input type="radio" name="40yoFather" value="Unsicher"> Unsicher</label>
-    </div>
-</div>
-
-<!-- Frage 10 -->
-<div class="form-field">
-    <label for="29yoSchizophrenia">10. Darf eine 29-Jährige Frau mit Schizophrenie Sterbehilfe in Anspruch nehmen?</label><br>
-    <div>
-        <label><input type="radio" name="29yoSchizophrenia" value="Ja"> Ja</label><br>
-        <label><input type="radio" name="29yoSchizophrenia" value="Nein"> Nein</label><br>
-        <label><input type="radio" name="29yoSchizophrenia" value="Unsicher"> Unsicher</label>
-    </div>
-</div>
-
-<!-- Frage 11 -->
-<div class="form-field">
-    <label for="35yoPTSD">11. Darf ein 35-Jähriger Soldat mit PTBS (Posttraumatische Belastungsstörung) Sterbehilfe erhalten?</label><br>
-    <div>
-        <label><input type="radio" name="35yoPTSD" value="Ja"> Ja</label><br>
-        <label><input type="radio" name="35yoPTSD" value="Nein"> Nein</label><br>
-        <label><input type="radio" name="35yoPTSD" value="Unsicher"> Unsicher</label>
-    </div>
-</div>
-
-<!-- Frage 12 -->
-<div class="form-field">
-    <label for="7yoBipolar">12. Darf ein 7-Jähriges Kind mit bipolarer Störung Sterbehilfe beanspruchen?</label><br>
-    <div>
-        <label><input type="radio" name="7yoBipolar" value="Ja"> Ja</label><br>
-        <label><input type="radio" name="7yoBipolar" value="Nein"> Nein</label><br>
-        <label><input type="radio" name="7yoBipolar" value="Unsicher"> Unsicher</label>
-    </div>
-</div>
-
-<!-- Frage 13 -->
-<div class="form-field">
-    <label for="52yoCFS">13. Darf eine 52-Jährige Frau mit ME/CFS Sterbehilfe erhalten?</label><br>
-    <div>
-        <label><input type="radio" name="52yoCFS" value="Ja"> Ja</label><br>
-        <label><input type="radio" name="52yoCFS" value="Nein"> Nein</label><br>
-        <label><input type="radio" name="52yoCFS" value="Unsicher"> Unsicher</label>
-    </div>
-</div>
-
-<!-- Frage 14 -->
-<div class="form-field">
-    <label for="14yoDownSyndrome">14. Darf eine 14-Jährige mit Down-Syndrom Sterbehilfe beanspruchen?</label><br>
-    <div>
-        <label><input type="radio" name="14yoDownSyndrome" value="Ja"> Ja</label><br>
-        <label><input type="radio" name="14yoDownSyndrome" value="Nein"> Nein</label><br>
-        <label><input type="radio" name="14yoDownSyndrome" value="Unsicher"> Unsicher</label>
-    </div>
-</div>
-
-<!-- Frage 15 -->
-<div class="form-field">
-    <label for="27yoParaplegic">15. Darf ein 27-Jähriger Mann, der querschnittsgelähmt im Rollstuhl sitzt, Sterbehilfe in Anspruch nehmen?</label><br>
-    <div>
-        <label><input type="radio" name="27yoParaplegic" value="Ja"> Ja</label><br>
-        <label><input type="radio" name="27yoParaplegic" value="Nein"> Nein</label><br>
-        <label><input type="radio" name="27yoParaplegic" value="Unsicher"> Unsicher</label>
-    </div>
-</div>
-<!-- Frage 16 -->
-  <div class="form-field">
                 <label for="decisionEuthanasia">16. Wer darf darüber entscheiden?</label><br>
                 <div>
                     <label><input type="checkbox" name="decisionEuthanasia" value="Der Patient selbst"> Der Patient selbst</label><br>
@@ -275,7 +107,7 @@
                 </div>
             </div>
 
-                <!-- Frage 18 -->
+            <!-- Frage 18 -->
             <div class="form-field">
                 <label for="moralEuthanasia">18. Findest du Sterbehilfe moralisch vertretbar?</label><br>
                 <div>
@@ -340,7 +172,8 @@
         document.querySelectorAll('input[type="radio"]').forEach((radio) => {
             radio.addEventListener('change', function () {
                 const questionName = this.name;
-                if (questionName !== 'decisionEuthanasia' && questionName !== 'performEuthanasia') {
+                // Sperren der Frage, wenn es nicht 6, 16 oder 17 ist
+                if (![6, 16, 17].includes(+questionName.split(/[^0-9]/).join(''))) {
                     lockQuestion(questionName);
                 }
             });
