--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
         <div class="tooltip" id="tooltip"></div>
     </div>
 
-    <script src="https://cdn.emailjs.com/sdk/3.2/email.min.js"></script>
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script type="text/javascript">
         (function () {
             emailjs.init("qsmH-iM0gbpRg_ncO"); // User ID
