--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             cursor: pointer;
             font-family: Helvetica, sans-serif;
             font-size: 14px;
-            width: auto; /* Höhe des Buttons anpassen */
+            width: 150px; /* Dieser Wert kann nach Bedarf angepasst werden */
         }
 
         input[type="submit"]:hover {
@@ -266,7 +266,7 @@
                     <label><input type="checkbox" name="whoDecides" value="Der Patient selbst">Der Patient selbst</label><br>
                     <label><input type="checkbox" name="whoDecides" value="Familie oder gesetzliche Vertreter">Familie oder gesetzliche Vertreter</label><br>
                     <label><input type="checkbox" name="whoDecides" value="Ärzte und Pfleger">Ärzte und Pfleger</label><br>
-                    <label><input type="checkbox" name="whoDecides" value="Ethikkommissionen"> 
+                    <label><input type="checkbox" name="whoDecides" value="Ethikkommissionen">
                         <span class="definition" onmouseover="showTooltip(event, 'Ethikkommissionen sind Gruppen von Menschen, die über schwierige medizinische Entscheidungen nachdenken und beraten.')" 
                               onmouseout="hideTooltip()">Ethikkommissionen</span></label>
                 </div>
@@ -315,7 +315,7 @@
 
             <!-- Absenden Button -->
             <div class="form-field">
-                <input type="submit" value="Absenden" style="width: auto;"> <!-- Button Breite anpassen -->
+                <input type="submit" value="Absenden" style="width: 100px;"> <!-- Absenden Button Breite -->
             </div>
         </form>
 
