--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             cursor: pointer;
             font-family: Helvetica, sans-serif;
             font-size: 14px;
-            width: 150px; /* Dieser Wert kann nach Bedarf angepasst werden */
+            width: 100px; /* Hier die Breite für den Button einstellen */
         }
 
         input[type="submit"]:hover {
@@ -315,7 +315,7 @@
 
             <!-- Absenden Button -->
             <div class="form-field">
-                <input type="submit" value="Absenden" style="width: 100px;"> <!-- Absenden Button Breite -->
+                <input type="submit" value="Absenden" style="width: auto;"> <!-- Hier die Breite entsprechend anpassen -->
             </div>
         </form>
 
