--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            font-family: Helvetica, sans-serif;
-            font-size: 14px;
-            width: 50px; /* Hier die Breite für den Button einstellen */
+            font-family: Helvetica, sans-serif; /* Schriftart für den Button */
+            font-size: 14px; /* Schriftgröße anpassen */
+            width: 100px; /* Hier die Breite für den Button einstellen */
         }
 
         input[type="submit"]:hover {
@@ -315,7 +315,7 @@
 
             <!-- Absenden Button -->
             <div class="form-field">
-                <input type="submit" value="Absenden" style="width: auto;"> <!-- Hier die Breite entsprechend anpassen -->
+                <input type="submit" value="Absenden"> <!-- Button Style bleibt gleich -->
             </div>
         </form>
 
