--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            font-family: Helvetica, sans-serif; /* Schriftart für den Button */
-            font-size: 14px; /* Schriftgröße anpassen */
-            width: 100px; /* Hier die Breite für den Button einstellen */
+            font-family: Helvetica, sans-serif;
+            font-size: 14px;
+            font-weight: bold; /* Schriftart auf fett setzen */
+            width: 100px;
         }
 
         input[type="submit"]:hover {
