--- a/index.html
+++ b/index.html
@@ -47,8 +47,6 @@
             cursor: pointer;
             font-family: Helvetica, sans-serif;
             font-size: 14px;
-            font-weight: bold; /* Schriftart auf fett setzen */
-            width: 100px;
         }
 
         input[type="submit"]:hover {
@@ -149,11 +147,11 @@
             <!-- Frage 7 -->
             <div class="form-field">
                 <label>7. Darf eine 90-Jährige Oma mit vielen Krankheiten (z. B. 
-                    <span class="definition" onmouseover="showTooltip(event, 'Demenz ist eine Krankheit, bei der das Gedächtnis und das Denken schlechter werden.')" 
+                    <span class="definition" onmouseover="showTooltip(event, 'Demenz ist eine Krankheit, bei der das Gedächtnis und das Denken schlechter werden.')"
                           onmouseout="hideTooltip()">Demenz</span>, 
-                    <span class="definition" onmouseover="showTooltip(event, 'Alzheimer ist eine Form der Demenz, die sehr schwer wird und das Gedächtnis betrifft.')" 
+                    <span class="definition" onmouseover="showTooltip(event, 'Alzheimer ist eine Form der Demenz, die sehr schwer wird und das Gedächtnis betrifft.')"
                           onmouseout="hideTooltip()">Alzheimer</span>, 
-                    <span class="definition" onmouseover="showTooltip(event, 'Krebs im Endstadium bedeutet, dass der Krebs sehr schlimm ist und die Person bald sterben wird.')" 
+                    <span class="definition" onmouseover="showTooltip(event, 'Krebs im Endstadium bedeutet, dass der Krebs sehr schlimm ist und die Person bald sterben wird.')"
                           onmouseout="hideTooltip()">Krebs im Endstadium</span>) Sterbehilfe erhalten?</label><br>
                 <div>
                     <label><input type="radio" name="ageWOMAN" value="Ja" onchange="lockThis(this)">Ja</label><br>
@@ -165,7 +163,7 @@
             <!-- Frage 8 -->
             <div class="form-field">
                 <label>8. Darf ein 9-Jähriges Kind mit 
-                    <span class="definition" onmouseover="showTooltip(event, 'Krebs ist eine Krankheit, bei der Zellen im Körper unkontrolliert wachsen.')" 
+                    <span class="definition" onmouseover="showTooltip(event, 'Krebs ist eine Krankheit, bei der Zellen im Körper unkontrolliert wachsen.')"
                           onmouseout="hideTooltip()">Krebs</span> Sterbehilfe in Anspruch nehmen?</label><br>
                 <div>
                     <label><input type="radio" name="ageKID1" value="Ja" onchange="lockThis(this)">Ja</label><br>
@@ -177,9 +175,9 @@
             <!-- Frage 9 -->
             <div class="form-field">
                 <label>9. Darf ein 40-Jähriger Familienvater mit einem 
-                    <span class="definition" onmouseover="showTooltip(event, 'Ein Schlaganfall passiert, wenn das Gehirn nicht genug Blut bekommt und geschädigt wird.')" 
+                    <span class="definition" onmouseover="showTooltip(event, 'Ein Schlaganfall passiert, wenn das Gehirn nicht genug Blut bekommt und geschädigt wird.')"
                           onmouseout="hideTooltip()">Schlaganfall</span> (mit 
-                    <span class="definition" onmouseover="showTooltip(event, 'Eine einseitige Lähmung bedeutet, dass eine Körperseite nicht mehr richtig funktioniert.')" 
+                    <span class="definition" onmouseover="showTooltip(event, 'Eine einseitige Lähmung bedeutet, dass eine Körperseite nicht mehr richtig funktioniert.')"
                           onmouseout="hideTooltip()">einer einseitigen Lähmung</span>) Sterbehilfe beanspruchen?</label><br>
                 <div>
                     <label><input type="radio" name="ageFATHER" value="Ja" onchange="lockThis(this)">Ja</label><br>
@@ -191,7 +189,7 @@
             <!-- Frage 10 -->
             <div class="form-field">
                 <label>10. Darf eine 29-Jährige Frau mit 
-                    <span class="definition" onmouseover="showTooltip(event, 'Schizophrenie ist eine Krankheit, die das Denken und Fühlen einer Person beeinflusst.')" 
+                    <span class="definition" onmouseover="showTooltip(event, 'Schizophrenie ist eine Krankheit, die das Denken und Fühlen einer Person beeinflusst.')"
                           onmouseout="hideTooltip()">Schizophrenie</span> Sterbehilfe in Anspruch nehmen?</label><br>
                 <div>
                     <label><input type="radio" name="ageWOMAN2" value="Ja" onchange="lockThis(this)">Ja</label><br>
@@ -203,7 +201,7 @@
             <!-- Frage 11 -->
             <div class="form-field">
                 <label>11. Darf ein 35-Jähriger Soldat mit 
-                    <span class="definition" onmouseover="showTooltip(event, 'PTBS ist ein Problem, das nach schlimmen Erlebnissen kommt, und kann Traurigkeit oder Angst verursachen.')" 
+                    <span class="definition" onmouseover="showTooltip(event, 'PTBS ist ein Problem, das nach schlimmen Erlebnissen kommt, und kann Traurigkeit oder Angst verursachen.')"
                           onmouseout="hideTooltip()">PTBS</span> (Posttraumatische Belastungsstörung) Sterbehilfe erhalten?</label><br>
                 <div>
                     <label><input type="radio" name="ageSOLDIER" value="Ja" onchange="lockThis(this)">Ja</label><br>
@@ -215,7 +213,7 @@
             <!-- Frage 12 -->
             <div class="form-field">
                 <label>12. Darf ein 7-Jähriges Kind mit 
-                    <span class="definition" onmouseover="showTooltip(event, 'Bipolare Störung ist eine Krankheit, bei der die Stimmung sehr schnell wechselt.')" 
+                    <span class="definition" onmouseover="showTooltip(event, 'Bipolare Störung ist eine Krankheit, bei der die Stimmung sehr schnell wechselt.')"
                           onmouseout="hideTooltip()">bipolarer Störung</span> Sterbehilfe beanspruchen?</label><br>
                 <div>
                     <label><input type="radio" name="ageKID2" value="Ja" onchange="lockThis(this)">Ja</label><br>
@@ -227,7 +225,7 @@
             <!-- Frage 13 -->
             <div class="form-field">
                 <label>13. Darf eine 52-Jährige Frau mit 
-                    <span class="definition" onmouseover="showTooltip(event, 'ME/CFS ist ein Zustand, der extreme Müdigkeit verursacht und die Lebensqualität stark beeinträchtigen kann.')" 
+                    <span class="definition" onmouseover="showTooltip(event, 'ME/CFS ist ein Zustand, der extreme Müdigkeit verursacht und die Lebensqualität stark beeinträchtigen kann.')"
                           onmouseout="hideTooltip()">ME/CFS</span> Sterbehilfe erhalten?</label><br>
                 <div>
                     <label><input type="radio" name="ageWOMAN3" value="Ja" onchange="lockThis(this)">Ja</label><br>
@@ -239,7 +237,7 @@
             <!-- Frage 14 -->
             <div class="form-field">
                 <label>14. Darf eine 14-Jährige mit 
-                    <span class="definition" onmouseover="showTooltip(event, 'Das Down-Syndrom ist eine genetische Störung, die eine Person auf besondere Weise veranlasst.')" 
+                    <span class="definition" onmouseover="showTooltip(event, 'Das Down-Syndrom ist eine genetische Störung, die eine Person auf besondere Weise veranlasst.')"
                           onmouseout="hideTooltip()">Down-Syndrom</span> Sterbehilfe beanspruchen?</label><br>
                 <div>
                     <label><input type="radio" name="ageGIRL" value="Ja" onchange="lockThis(this)">Ja</label><br>
@@ -251,7 +249,7 @@
             <!-- Frage 15 -->
             <div class="form-field">
                 <label>15. Darf ein 27-Jähriger Mann, der 
-                    <span class="definition" onmouseover="showTooltip(event, 'Querschnittslähmung bedeutet, dass die Verbindung zwischen dem Gehirn und dem Körper beschädigt ist.')" 
+                    <span class="definition" onmouseover="showTooltip(event, 'Querschnittslähmung bedeutet, dass die Verbindung zwischen dem Gehirn und dem Körper beschädigt ist.')"
                           onmouseout="hideTooltip()">querschnittsgelähmt</span> im Rollstuhl sitzt, Sterbehilfe in Anspruch nehmen?</label><br>
                 <div>
                     <label><input type="radio" name="ageMAN" value="Ja" onchange="lockThis(this)">Ja</label><br>
@@ -267,9 +265,9 @@
                     <label><input type="checkbox" name="whoDecides" value="Der Patient selbst">Der Patient selbst</label><br>
                     <label><input type="checkbox" name="whoDecides" value="Familie oder gesetzliche Vertreter">Familie oder gesetzliche Vertreter</label><br>
                     <label><input type="checkbox" name="whoDecides" value="Ärzte und Pfleger">Ärzte und Pfleger</label><br>
-                    <label><input type="checkbox" name="whoDecides" value="Ethikkommissionen">
-                        <span class="definition" onmouseover="showTooltip(event, 'Ethikkommissionen sind Gruppen von Menschen, die über schwierige medizinische Entscheidungen nachdenken und beraten.')" 
-                              onmouseout="hideTooltip()">Ethikkommissionen</span></label>
+                    <label><input type="checkbox" name="whoDecides" value="Ethikkommissionen"> 
+                    <span class="definition" onmouseover="showTooltip(event, 'Ethikkommissionen sind Gruppen von Menschen, die über schwierige medizinische Entscheidungen nachdenken und beraten.')"
+                          onmouseout="hideTooltip()">Ethikkommissionen</span></label>
                 </div>
             </div>
 
@@ -286,7 +284,7 @@
 
             <!-- Frage 18 -->
             <div class="form-field">
-                <label>18. Findest du Sterbehilfe <span class="definition" onmouseover="showTooltip(event, 'Moralisch vertretbar bedeutet, dass es richtig ist, wenn man nach den Prinzipien von gut und schlecht fragt.')" 
+                <label>18. Findest du Sterbehilfe <span class="definition" onmouseover="showTooltip(event, 'Moralisch vertretbar bedeutet, dass es richtig ist, wenn man nach den Prinzipien von gut und schlecht fragt.')"
                     onmouseout="hideTooltip()">moralisch vertretbar</span>?</label><br>
                 <div>
                     <label><input type="radio" name="moralEuthanasia" value="Ja" onchange="lockThis(this)">Ja</label><br>
@@ -316,7 +314,7 @@
 
             <!-- Absenden Button -->
             <div class="form-field">
-                <input type="submit" value="Absenden"> <!-- Button Style bleibt gleich -->
+                <input type="submit" value="Absenden">
             </div>
         </form>
 
